Revision history for Perl extension DBIx::DataModel.

v3.12 20.02.2025
  - fix bug introduced in v3.11 : SQL errors properly raised exceptions, but would also incorrectly reset DBI::err and DBI::errstr

v3.11 28.04.2024
  - Carp::Clan replaced by Carp::Object
  - new Schema attribute: 'frame_filter' (to be transmitted to Devel::StackTrace)
  - new Schema attribute: 'auto_show_error_statement'
  - $dbh->{ShowErrorStatement} is automatically turned on by default
  - more precise multiplicity rules for Compositions
      - the composite multiplicity must be 1..1     (previously 0..1 was incorrectly allowed)
      - the component multiplicity must not be 1..1 (previously 0..1 was incorrectly forbidden)

v3.10 11.03.2024
  - bug fix : schema attribute setters must accept undef (for erasing the attribute)
  - added tests for the debug() method
  - internal refactoring : find_result_class() is now done in the metaschema, not in Statement class

v3.09 27.01.2024
  - installing $dbh->{HandleError} so that error messages are reported from the caller's perspective
  - new feature: select(..., -result_as => [subquery => 'aliased_column'])

v3.08 13.01.2024
  - new Statement arg : -sql_abstract (can also be written -with) for supporting Common Table Expressions
  - refactoring of method Statement::refine()

v3.07 26.12.2023
  - -where_on : support for table aliases and association names

v3.06 22.11.2023
  - support for SQL dialect 'Oracle12c'
  - new arguments 'sql_abstract_class' and 'sql_abstract_args' to define_schema()

v3.05 26.07.2023
  - new method $statement->nb_fetched_rows & fix buggy $statement->page_boundaries

v3.04 05.11.2022
  - fix $metatable->components (was populated on both paths, which is obviously wrong)

v3.03 23.07.2022
  - forgot to update Build.PL to depend on SQL::Abstract::More v1.39

v3.02 22.07.2022
  - upgrade dependency on SQL::Abstract::More v1.37
  - fix circular dependency in Meta::Utils