@@ -1,5 +1,7 @@
 Revision history for Perl extension DBIx::DataModel.
 
+  - new feature: select(..., -result_as => [correlated_update => \%columns_to_set]);
+
 v3.12 20.02.2025
   - fix bug introduced in v3.11 : SQL errors properly raised exceptions, but would also incorrectly reset DBI::err and DBI::errstr
 
